[package]
name = "cli-cross-x86"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.8", features = ["derive", "clap_derive"] }
anyhow = { version = "1.0.65"}
chrono = "0.4"

[build-dependencies]
chrono = "0.4"
vergen = "7.4.2"

[profile.release]
strip = true  # Automatically strip symbols from the binary.
